bitfields/tests/compile_error_cases/errors/bitfield_lsb_field_bits_too_large.rs
use bitfields::bitfield;

#[bitfield(u32, order = lsb)]
pub struct Bitfield {
    a: u32,
    b: u32
}

fn main() {}
